syntax = "proto3";

package task;
option go_package = "github.com/pachyderm/pachyderm/v2/src/internal/task";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

enum State {
  STATE_UNKNOWN = 0;
  RUNNING = 1;
  SUCCESS = 2;
  FAILURE = 3;
}

message Group {}

message Task {
  string id = 1 [(gogoproto.customname) = "ID"];
  State state = 2;
  google.protobuf.Any input = 3;
  google.protobuf.Any output = 4;
  string reason = 5;
}

message Claim {}

message TestTask {
  string id = 1 [(gogoproto.customname) = "ID"];
}
